--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link type="style/css" src="style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testt</title>
+    <title>Style Sites | Home</title>
 </head>
 <body>
     <h2>Sorry</h2>
