--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Style Sites | Home</title>
 </head>
 <body>
-    <h2>Sorry</h2>
+    <div class="title">
+        <video autoplay muted loop id="HeaderVideo">
+            <source src="./assets/HeaderBGvid.mp4" type="video/mp4">
+          </video>
+        <div class="content">
+            <h2>Style Sites</h2>
+        </div>
+    </div>
 </body>
 </html>
