Made the beggining of the 404 project

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <link rel="stylesheet" href="style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Sites | Home</title>
+    <title>404 Project | Home</title>
 </head>
 <body>
-    <div class="title">
-        <video autoplay muted loop id="HeaderVideo">
-            <source src="./assets/HeaderBGvid.mp4" type="video/mp4">
-          </video>
-        <div class="content">
-            <h2>Style Sites</h2>
-        </div>
-    </div>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Home
+    </a>
 </body>
 </html>
