--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <span></span>
         <span></span>
         <span></span>
-        Learn Mores
+        Learn More
     </a>
 </body>
 </html>
