Severe Changes to the landing page

--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <title>404 Project | Home</title>
 </head>
 <body>
+
     <a href="#">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
-        Learn More
+        404 Project
+    </a>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Services
     </a>
 </body>
 </html>
