--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="./assets/Logo.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="./assets/Logo.pngWi" sizes="16x16" type="image/png">
     <link rel="stylesheet" href="style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,19 +9,26 @@
 </head>
 <body>
 
-    <a href="#">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        404 Project
-    </a>
-    <a href="#">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        Services
-    </a>
+    <div class="title">
+        <h2>Stlye Sites</h2>
+    </div>
+
+    <div class="Buttons">
+        <a href="#">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Project 404
+        </a>
+        <a href="#">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Operation Style
+        </a>
+    </div>
+    
 </body>
 </html>
